[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/EnemyDigger.png" type="Texture" id=1]
[ext_resource path="res://Enemy/Scripts/EnemyArea2D.gd" type="Script" id=2]
[ext_resource path="res://Enemy/Scripts/EnemyDigger.gd" type="Script" id=3]

[sub_resource type="Animation" id=1]
resource_name = "comming_out"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.0980392 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.31, 0.55, 0.81, 1.05, 1.27, 1.51, 1.79, 2.03, 2.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -60.0, -75.0, -60.0, -75.0, -60.0, -75.0, -60.0, -75.0, 0.0 ]
}

[sub_resource type="Animation" id=2]
resource_name = "default"
length = 0.001

[sub_resource type="Animation" id=3]
resource_name = "die"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 37.101 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "receive_attack"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.273375, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.941176, 0.611765, 0.611765, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Sprite:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.226492, -38.0498, 0, -0.20476, 39.4965, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5 )
}

[sub_resource type="CapsuleShape2D" id=5]
radius = 22.3986
height = 76.8381

[node name="EnemyDigger" type="Node2D" groups=[
"claw_attackable",
"enemy",
]]
position = Vector2( 216.862, 136.584 )
script = ExtResource( 3 )
health = 15
min_wave = 10
difficulty_point = 5
digging_speed = 200.0
movement_speed = 125.0
activation_x = 600.0

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.0980392 )
scale = Vector2( 0.231613, 0.231613 )
texture = ExtResource( 1 )

[node name="Particles2D" type="CPUParticles2D" parent="."]
amount = 64
explosiveness = 0.19
randomness = 1.0
lifetime_randomness = 0.77
local_coords = false
emission_shape = 1
emission_sphere_radius = 10.0
direction = Vector2( -1, 0.5 )
gravity = Vector2( 0, 0 )
initial_velocity = 60.0
initial_velocity_random = 1.0
linear_accel = -10.0
scale_amount = 4.0
scale_amount_random = 1.0
color = Color( 0.8, 0.631373, 0.235294, 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/comming_out = SubResource( 1 )
anims/default = SubResource( 2 )
anims/die = SubResource( 3 )
anims/receive_attack = SubResource( 4 )

[node name="SearchTargetTimer" type="Timer" parent="."]
one_shot = true

[node name="PearlContainer" type="Node2D" parent="."]
position = Vector2( -21.5124, -10.0376 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="Area2D" type="Area2D" parent="."]
visible = false
monitoring = false
monitorable = false
collision_layer = 12
collision_mask = 0
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 4.41177, 5.04202 )
rotation = 1.5708
shape = SubResource( 5 )

[node name="StunTimer" type="Timer" parent="."]
one_shot = true
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="timeout" from="StunTimer" to="." method="_on_StunTimer_timeout"]
